--- a/templates/base.html
+++ b/templates/base.html
@@ -37,6 +37,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'stats:dashboard' %}">Статистика</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'feedback:feedback_form' %}">Отзыв</a>
+                    </li>
                 </ul>
 
                 <ul class="navbar-nav ms-auto align-items-center navbar-theme">
